evaluation webapp: break table lines if they are too long + highlighting of individual corrected and wrong positions

--- a/evaluation-webapp/www/style.css
+++ b/evaluation-webapp/www/style.css
@@ -20,8 +20,12 @@ html, body {
 }
 
 table, td, th {
-  border: 1px solid black;
-  border-collapse: collapse;
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+td {
+	word-break: break-all;
 }
 
 .content {
